--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/node-challenge/main",
+    "start:prod": "node dist/apps/api-service/main",
+    "start:stocks": "nest start stock-service",
+    "start:dev:stocks": "nest start stock-service --watch",
+    "start:debug:stocks": "nest start stock-service --debug --watch",
+    "start:prod:stocks": "node dist/apps/stock-service/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,13 +24,21 @@
     "test:e2e": "jest --config ./apps/node-challenge/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.3",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.3",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.3",
     "@nestjs/terminus": "^9.2.2",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -39,6 +51,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@prisma/client": "^4.15.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/lodash": "^4.14.195",
