--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/microservices": "^9.4.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
