--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "resend": "^0.15.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
